various level 12 fixes, made lessons index number smaller on mobile

--- a/frontend/src/Styles/LessonsIndex.css
+++ b/frontend/src/Styles/LessonsIndex.css
@@ -796,11 +796,11 @@
   }
 
   .lesson-item-left {
-    gap: 2.5rem;
+    gap: 1.85rem;
   }
 
   .lesson-number {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     text-align: left;
   }
 
